Alteracao do nome - CP

--- a/www/Pages/ContasPagar.cshtml
+++ b/www/Pages/ContasPagar.cshtml
@@ -12,7 +12,7 @@
                 <img src="~/imagens/procurar.png" alt="Pesquisar" style="width: 20px; height: 20px;">
                 Pesquisar
             </button>
-            <center>Contas a Pagar</center>
+            <center>Lançamento de Despesas</center>
         </h1>
     </div>
 
