--- a/www/Pages/CadastroEspecialidade.cshtml
+++ b/www/Pages/CadastroEspecialidade.cshtml
@@ -11,7 +11,7 @@
                 <img src="~/imagens/procurar.png" alt="Pesquisar" style="width: 20px; height: 20px;">
                 Pesquisar
             </button>
-            <center>Cadastro de Especialidadee</center>
+            <center>Cadastro de Especialidadeeeeeeeee</center>
         </h1>
     </div>
 
